--- a/Express/Base.lproj/Main.storyboard
+++ b/Express/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="shs-bv-5cN" kind="relationship" relationship="rootViewController" id="Y9o-hf-F6M"/>
+                        <segue destination="CVo-E9-4hP" kind="relationship" relationship="rootViewController" id="mF0-Aj-r9w"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kbb-EQ-h8o" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -133,35 +133,33 @@
             <point key="canvasLocation" x="-1580.5" y="407.5"/>
         </scene>
         <!--快递历史-->
-        <scene sceneID="4Yd-FM-c7k">
+        <scene sceneID="ZWh-f5-Q1q">
             <objects>
-                <tableViewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="shs-bv-5cN" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="BYK-oG-ZF9">
+                <viewController id="CVo-E9-4hP" customClass="ExpressHistoryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="n25-6x-hyE"/>
+                        <viewControllerLayoutGuide type="bottom" id="7h6-3h-pC4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="11c-K2-HZB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uHZ-34-Ta5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="EIi-YJ-ezL">
-                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EIi-YJ-ezL" id="Cik-hX-8fz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="shs-bv-5cN" id="ntr-mf-LjX"/>
-                            <outlet property="delegate" destination="shs-bv-5cN" id="mVe-KR-v9Y"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="快递历史" id="LVW-ne-jvb"/>
-                    <navigationItem key="navigationItem" title="快递历史" id="w1X-la-lpa"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="快递历史" id="wLp-cc-LfG"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1kc-wS-8ee" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    <connections>
+                        <outlet property="tableView" destination="uHZ-34-Ta5" id="ert-pZ-VcG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jbD-BM-CgE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1104.5" y="425.5"/>
+            <point key="canvasLocation" x="-1062.5" y="399.5"/>
         </scene>
         <!--快递电话-->
         <scene sceneID="EZE-Om-lc6">
